Improve navigation, responsivenes & design

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -31,3 +31,9 @@ header a:hover {
   color: #ffcc00;
   text-decoration: none;
 }
+
+@media (max-width: 620px) {
+  header {
+    padding: 8px 8px;
+  }
+}
