--- a/src/components/pano-card/pano-card.css
+++ b/src/components/pano-card/pano-card.css
@@ -70,3 +70,19 @@
   margin-bottom: 4px;
   align-self: flex-end;
 }
+
+.pano-card ul.footer {
+  padding: 0;
+  margin: 0;
+  margin-top: 4px;
+  list-style: none;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+}
+
+.pano-card ul.footer li {
+  margin-left: 6px;
+  width: auto;
+  white-space: nowrap;
+}
