--- a/src/index.css
+++ b/src/index.css
@@ -5,11 +5,6 @@
 }
 @font-face {
   font-family: "Roboto";
-  src: local("Roboto"), url("./fonts/Roboto-Light.ttf") format("truetype");
-  font-weight: thin;
-}
-@font-face {
-  font-family: "Roboto";
   src: local("Roboto"), url("./fonts/Roboto-Regular.ttf") format("truetype");
   font-weight: normal;
 }
@@ -52,6 +47,24 @@ h3 {
 
 h4 {
   font-size: 22px;
+}
+
+@media (max-width: 620px) {
+  h1 {
+    font-size: 28px;
+  }
+
+  h2 {
+    font-size: 22px;
+  }
+
+  h3 {
+    font-size: 20px;
+  }
+
+  h4 {
+    font-size: 18px;
+  }
 }
 
 p {
