--- a/src/pages/user/photo/components/photo-header/photo-header.css
+++ b/src/pages/user/photo/components/photo-header/photo-header.css
@@ -4,7 +4,7 @@
   top: 0px;
   right: 0px;
   padding: 2px 16px;
-  width: calc(100vw - 200px);
+  width: calc(100vw - 90px);
   height: 68px;
   color: #fafafa;
   z-index: 1000;
@@ -26,8 +26,9 @@
 
 #photo-header h4 {
   overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
+  text-align: left;
+  min-width: 0;
+  text-align: right;
 }
 
 #photo-header h4,
@@ -42,5 +43,4 @@
   margin-left: 12px;
   text-overflow: ellipsis;
   overflow: hidden;
-  text-align: right;
 }
