--- a/src/pages/user/photo/components/photo-slider/photo-slider.css
+++ b/src/pages/user/photo/components/photo-slider/photo-slider.css
@@ -44,12 +44,29 @@
 #photo-slider button.toggle:hover:before {
   height: 34px;
 }
+#photo-slider button.gg-chevron-o {
+  border-color: #fafafa;
+  color: #fafafa;
+  overflow: visible;
+  z-index: 40;
+  position: absolute;
+  top: 90px;
+}
+
+#photo-slider button.gg-chevron-o {
+  right: 15px;
+}
+
+#photo-slider button.gg-chevron-o.left {
+  left: 15px;
+}
 
 #photo-slider .item-list {
   display: flex;
   justify-content: space-between;
   border-top: 3px solid #ffcc00;
   overflow-x: scroll;
+  scroll-behavior: smooth;
   width: 100%;
   height: 133px;
   background: #252525;
