--- a/src/index.css
+++ b/src/index.css
@@ -172,6 +172,37 @@ a.flickr:hover {
 
 /******************
  *
+ * PLACEHOLDER LOADER
+ *
+ ******************/
+.loading::before {
+  content: "";
+  display: block;
+  position: absolute;
+  left: -100%;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  background: linear-gradient(
+    to right,
+    #e9e9e900 0%,
+    #e9e9e9 50%,
+    #e9e9e900 100%
+  );
+  animation: load 1s cubic-bezier(0.4, 0, 0.2, 1) infinite;
+}
+
+@keyframes load {
+  from {
+    left: -100%;
+  }
+  to {
+    left: 100%;
+  }
+}
+
+/******************
+ *
  * TRANSITIONS
  *
  ******************/
