CSS fixes for Chrome, the new IE9

--- a/src/components/start-here/start-here.css
+++ b/src/components/start-here/start-here.css
@@ -54,6 +54,7 @@
   font-weight: bold;
   background-color: #fafafa44;
   transition: all 0.82s ease;
+  padding: 0 15px;
   color: #fafafadd;
   text-transform: uppercase;
 }
