--- a/src/pages/user/photo/components/photo-header/photo-header.css
+++ b/src/pages/user/photo/components/photo-header/photo-header.css
@@ -3,7 +3,7 @@
   user-select: none;
   top: 0px;
   right: 0px;
-  padding: 2px 16px;
+  padding: 2px 10px;
   padding-left: 95px;
   width: 100vw;
   height: 68px;
@@ -31,14 +31,19 @@
   color: #ffcc00;
 }
 
-#photo-header h4 {
-  overflow: hidden;
-  text-align: left;
-  min-width: 0;
-  text-align: right;
+#photo-header .content {
+  padding-left: 95px;
+  padding-bottom: 4px;
 }
 
-#photo-header h4,
+#photo-header h4 {
+  overflow: hidden;
+  text-align: right;
+  width: calc(100vw - 110px);
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
 #photo-header p {
   display: flex;
   flex-wrap: wrap;
@@ -54,6 +59,16 @@
 
 #photo-header .header-controls {
   position: absolute;
-  top: 90px;
-  right: 30px;
+  top: 72px;
+  right: 20px;
+}
+
+#photo-header .header-controls button {
+  border: none;
+  background-color: #00000081;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  width: 60px;
+  border-radius: 0 0 1px 1px;
 }
