--- a/src/pages/user/photo/components/photo-slider/photo-slider.css
+++ b/src/pages/user/photo/components/photo-slider/photo-slider.css
@@ -21,7 +21,6 @@
   border: none;
   background: transparent;
   position: relative;
-  border-bottom: 4px solid #ffcc00;
 }
 #photo-slider button.toggle:hover {
   color: #252525;
@@ -40,35 +39,45 @@
   transition: height 0.08s ease-out;
   height: 0px;
 }
-
 #photo-slider button.toggle:hover:before {
   height: 34px;
 }
-#photo-slider button.gg-chevron-o {
-  border-color: #fafafa;
+
+#photo-slider button {
+  border: none;
+  background-color: transparent;
   color: #fafafa;
-  overflow: visible;
+  overflow: hidden;
   z-index: 40;
   position: absolute;
-  top: 90px;
+  padding: 0;
+  top: 0;
+  height: 115px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+#photo-slider button {
+  right: 0px;
+}
+#photo-slider button.left {
+  left: 0px;
 }
 
-#photo-slider button.gg-chevron-o {
-  right: 15px;
-}
-
-#photo-slider button.gg-chevron-o.left {
-  left: 15px;
+#photo-slider .slider {
+  border-top: 3px solid #ffcc00;
+  position: relative;
 }
 
 #photo-slider .item-list {
   display: flex;
   justify-content: space-between;
-  border-top: 3px solid #ffcc00;
   overflow-x: scroll;
   scroll-behavior: smooth;
   width: 100%;
   height: 133px;
+  top: 0;
   background: #252525;
 }
 
@@ -79,7 +88,8 @@
   }
 
   #photo-slider button.toggle {
-    width: 160px !important;
+    width: 140px !important;
+    border-radius: 1px 1px 0 0;
     margin: auto;
     border: 0;
     background: #252525b6;
