--- a/src/pages/user/photo/components/photo-slider/photo-slider.css
+++ b/src/pages/user/photo/components/photo-slider/photo-slider.css
@@ -3,11 +3,13 @@
   bottom: -134px;
   left: 0;
   width: 100vw;
-  height: 170px;
+  height: 134px;
   transition: 0.08s ease-in;
   display: flex;
-  flex-direction: column;
-  background: transparent;
+  background: #252525;
+  justify-content: center;
+  z-index: 20;
+  border-top: 3px solid #ffcc00;
 }
 
 #photo-slider.show {
@@ -15,21 +17,32 @@
 }
 
 #photo-slider button.toggle {
-  width: 140px !important;
+  width: 120px;
   border-radius: 2px 2px 0 0;
-  margin: auto;
+  position: absolute;
   border: 0;
-  background: #252525b6;
   height: 34px;
   color: #fafafa;
   border: none;
-  position: relative;
+  top: -34px;
   font-weight: bold;
+  background: transparent;
+  border-bottom: 3px solid #ffcc00;
+}
+#photo-slider button.toggle::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  z-index: -2;
+  background: #252525b6;
 }
 #photo-slider button.toggle:hover {
   color: #252525;
 }
-#photo-slider button.toggle:before {
+#photo-slider button.toggle:after {
   content: "";
   position: absolute;
   background: #ffcc00;
@@ -42,11 +55,26 @@
   transition: height 0.08s ease-out;
   height: 0px;
 }
-#photo-slider button.toggle:hover:before {
+#photo-slider button.toggle:hover:after {
   height: 34px;
 }
 
-#photo-slider button {
+#photo-slider .content {
+  width: 100vw;
+}
+
+#photo-slider .content .item-list {
+  display: flex;
+  justify-content: space-between;
+  overflow-x: scroll;
+  scroll-behavior: smooth;
+  width: 100vw;
+  height: 133px;
+  top: 0;
+  background: #252525;
+}
+
+#photo-slider .content button {
   border: none;
   background-color: transparent;
   color: #fafafa;
@@ -61,51 +89,11 @@
   justify-content: center;
   align-items: center;
 }
-#photo-slider button {
+#photo-slider .content button {
   right: 0px;
 }
-#photo-slider button.left {
+#photo-slider .content button.left {
   left: 0px;
-}
-
-#photo-slider .slider {
-  border-top: 3px solid #ffcc00;
-  position: relative;
-}
-
-#photo-slider .item-list {
-  display: flex;
-  justify-content: space-between;
-  overflow-x: scroll;
-  scroll-behavior: smooth;
-  width: 100%;
-  height: 133px;
-  top: 0;
-  background: #252525;
-}
-
-#photo-slider button.qualityToggle {
-  display: flex;
-  flex-direction: row;
-  display: none; /* hide this for now*/
-  margin-right: 20px;
-  height: 34px;
-  width: 34px;
-  overflow: hidden;
-  padding: 0;
-  background: #252525b6;
-}
-#photo-slider button.qualityToggle i {
-  line-height: 34px;
-  background-color: transparent;
-  height: 34px;
-  font-style: normal;
-  color: #fafafa77;
-}
-
-#photo-slider button.qualityToggle i.selected {
-  color: #fafafadd;
-  font-weight: bold;
 }
 
 @media (max-width: 900px) {
