Panorama position fixed

--- a/src/components/pano-viewer/pano-viewer-ecjs.css
+++ b/src/components/pano-viewer/pano-viewer-ecjs.css
@@ -1,10 +1,5 @@
 #panoviewer {
-  width: 100vw;
-  height: 100vh;
-}
-
-#panoviewer canvas {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100vw;
